# Armadillo_Shell

./: CMakeLists.txt  README.md  TerminalFormatting.h  armadillo.cpp  inputLoop.cpp  inputLoop.h  testing.txt
Commands/: Command.h  importAllCommands.h  validateAndExecuteCommand.cpp  validateAndExecuteCommand.h
Commands/BuiltinCommands/Cat/: Cat.h  Manual.h
Commands/BuiltinCommands/ChangeDirectory/: ChangeDirectory.h  Manual.h
Commands/BuiltinCommands/Cmd/: Cmd.h  Manual.h
Commands/BuiltinCommands/Command/: Cmd.h  Manual.h
Commands/BuiltinCommands/Copy/: Copy.h  Manual.h
Commands/BuiltinCommands/Date/: Date.h  Manual.h
Commands/BuiltinCommands/Echo/: Echo.h  Manual.h
Commands/BuiltinCommands/Edit/: Edit.h  Manual.h  Manual.txt  testing.txt
Commands/BuiltinCommands/ExampleCommand/: ExampleCommand.h  Manual.h  Manual.txt
Commands/BuiltinCommands/ExampleCommand2/: ExampleCommand2.h  Manual.h
Commands/BuiltinCommands/Find/: Find.h  Manual.h
Commands/BuiltinCommands/Grep/: Grep.h  Manual.h
Commands/BuiltinCommands/Help/: Help.h  Manual.h
Commands/BuiltinCommands/List/: List.h  Manual.h
Commands/BuiltinCommands/MakeDirectory/: MakeDirectory.h  Manual.h
Commands/BuiltinCommands/Man/: Man.h  Manual.h
Commands/BuiltinCommands/PrintWorkingDirectory/: Manual.h  PrintWorkingDirectory.h
Commands/BuiltinCommands/Process/: Manual.h  Manual.txt  Process.h
Commands/BuiltinCommands/Remove/: Manual.h  Remove.h
Commands/BuiltinCommands/Run/: Manual.h  Manual.txt  Run.h
Commands/BuiltinCommands/SaveTo/: Manual.h  SaveTo.h
Commands/BuiltinCommands/SystemInfo/: Manual.h  SystemInfo.h
Commands/BuiltinCommands/Touch/: Manual.h  Touch.h
Globals/: GlobalFlags.cpp  GlobalFlags.h
Handlers/: commandHandler.cpp  commandHandler.h  inputHandler.cpp  inputHandler.h  pipeHandler.cpp  pipeHandler.h
Resources/: ardoASCII.h  armadilloASCII.txt  armadilloLogo.txt
Tests/: testMain.cpp
Tests/builtinCommandTests/: testExampleCommand.cpp
